chore: fix register consul and healthcheck service  (#21)
* fix register consul and healthcheck service


* fix register consul and healthcheck service


* wraps the Visit method in discovery package

* rename explorer to visitor

---------
